--- a/.github/workflows/ZOV.yml
+++ b/.github/workflows/ZOV.yml
@@ -18,11 +18,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Lint JavaScript files
-      run: npx eslint .
+    # Удалены шаги линтинга JavaScript и CSS файлов, а также валидация HTML файлов
 
-    - name: Lint CSS files
-      run: npx stylelint "/*.css"
-
-    - name: Validate HTML files
-      run: npx htmlhint "/*.html"
+    # Шаг проверки сборки
+    - name: Build
+      run: npm run build
