--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "stylelint": "^13.13.1",
-    "htmlhint": "^0.14.2"
-  }
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "scripts": {
+    "build": "echo 'No build step required'"
+  },
 }
