--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "your-project-name",
+  "name": "3",
   "version": "1.0.0",
   "scripts": {
     "build": "echo 'No build step required'"
-  },
+  }
 }
